font awesome icon selection

--- a/Milestone1/index.html
+++ b/Milestone1/index.html
@@ -46,16 +46,22 @@
                     </div>
                 </div>
                 <div class="col-9">
-                    <div class="my-avatar">
-                        <div class="left-avatar">
-                            <img src="../img/avatar_1.jpg" alt="">
-                            <span>Michele</span>
+                    <div class="card-left">
+                        <div class="my-avatar">
+                            <div class="left-avatar">
+                                <img src="../img/avatar_1.jpg" alt="">
+                                <span>Michele</span>
+                            </div>
+                            <div class="rigth-avatar">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-paperclip"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
                         </div>
-                        <div class="rigth-avatar">
-                            <i class="fa-solid fa-circle-notch"></i>
-                            <i class="fa-solid fa-message"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i>
-                        </div>
+                        <div class="alert-notifica"></div>
+                        <div class="search-bar"></div>
+                        <div class="chat-list"></div>
+
                     </div>
                 </div>
             </div>
