--- a/Milestone1/index.html
+++ b/Milestone1/index.html
@@ -26,7 +26,7 @@
     <div id="app">
         <div class="container fix-container-heigth">
             <div class="row">
-                <div class="col-3  ">
+                <div class="col-4  ">
                     <div class="card-left">
                         <div class="my-avatar">
                             <div class="left-avatar">
@@ -39,18 +39,49 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
-                        <div class="alert-notifica"></div>
-                        <div class="search-bar"></div>
-                        <div class="chat-list"></div>
+                        <div class="alert-notifica">
+                            <div class="alert d-flex align-items-center py-2">
+                                <div class="bell-icon"><i class="fa-solid fa-bell-slash"></i></div>
+                                <div class="bell-text-description ">
+                                    <h5>Ricevi ntifiche di nuovi messaggi</h5>
+                                    <span style="text-decoration: underline;">Attiva Notifiche Desktop</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="search-bar d-flex align-items-center ">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input style="border: 0; width: 100%;" class="ps-5"
+                                placeholder="Cerca o inizia una nuova chat" type="text">
+                        </div>
+                        <div class="chat-list d-flex flex-column flex-grow-1">
+                            <div class="chat-list-card py-3 " v-for="user in mainArray">
+                                <div class="left-avatar">
+                                    <img :src="user.avatar" alt="">
+                                    <div>
+                                        <div>{{user.name}}</div>
+                                        <span>Ultimo messaggio</span>
+                                    </div>
+                                </div>
+                                <div class="rigth-avatar-time">
+                                    12:00
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
+
+
+
                 </div>
-                <div class="col-9">
-                    <div class="card-left">
+                <div class="col-8">
+                    <div class="card-right d-flex">
                         <div class="my-avatar">
                             <div class="left-avatar">
                                 <img src="../img/avatar_1.jpg" alt="">
-                                <span>Michele</span>
+                                <div>
+                                    <div>Michele</div>
+                                    <span>Ultimo accesso oggi alle 12:00</span>
+                                </div>
                             </div>
                             <div class="rigth-avatar">
                                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -58,11 +89,18 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
-                        <div class="alert-notifica"></div>
-                        <div class="search-bar"></div>
-                        <div class="chat-list"></div>
+                        <div class="main-chat flex-grow-1">
+
+                        </div>
+                        <div class="search-bar d-flex align-items-center py-3">
+                            <i class="fa-solid fa-face-smile"></i>
+                            <input style="border: 0; width: 100%;" class="ps-5"
+                                placeholder="Scrivi un messaggio" type="text">
+                                <i class="fa-solid fa-microphone"></i>
+                        </div>
 
                     </div>
+
                 </div>
             </div>
         </div>
