--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -90,8 +90,11 @@
                             </div>
                         </div>
                         <div class="main-chat flex-grow-1">
-                            <div class="container">
-
+                            <div class="container px-5">
+                                <div v-for="messagex in mainArray[0].messages">
+                                    <div v-if="messagex.status==`sent`" class="sent-message py-3"><h5 class="ps-2">{{messagex.message}}</h5></div>
+                                    <div v-if="messagex.status==`received`" class="receveid-message py-3"><h5 class="ps-2">{{messagex.message}}</h5></div>
+                                </div>
                             </div>
                         </div>
                         <div class="search-bar d-flex align-items-center py-3">
