--- a/Milestone 2/index.html
+++ b/Milestone 2/index.html
@@ -54,7 +54,7 @@
                                 placeholder="Cerca o inizia una nuova chat" type="text">
                         </div>
                         <div class="chat-list d-flex flex-column flex-grow-1 overflow-auto">
-                            <div class="chat-list-card py-3 "   v-for="(user,index) in mainArray" @click="changeVisibility(index)" :class="user.visible ? 'card-grey-class' : '' ">
+                            <div class="chat-list-card py-3 "   v-for="(user,index) in mainArray" @click="changeVisibility(user)" :class="user.visible ? 'card-grey-class' : '' ">
                                 <div class="left-avatar">
                                     <img :src="user.avatar" alt="">
                                     <div>
@@ -77,9 +77,9 @@
                     <div class="card-right d-flex h-100">
                         <div class="my-avatar">
                             <div class="left-avatar">
-                                <img src="../img/avatar_1.jpg" alt="">
+                                <img :src="currentUser.avatar" alt="">
                                 <div>
-                                    <div>Michele</div>
+                                    <div>{{currentUser.name}}</div>
                                     <span>Ultimo accesso oggi alle 12:00</span>
                                 </div>
                             </div>
@@ -91,9 +91,9 @@
                         </div>
                         <div class="main-chat flex-grow-1 overflow-auto">
                             <div class="container px-5">
-                                <div v-for="messagex in mainArray[0].messages">
-                                    <div v-if="messagex.status==`sent`" class="sent-message py-3"><h5 class="ps-2">{{messagex.message}}</h5></div>
-                                    <div v-if="messagex.status==`received`" class="receveid-message py-3"><h5 class="ps-2">{{messagex.message}}</h5></div>
+                                <div v-for="myUser in currentUser.messages">
+                                    <div v-if="myUser.status==`sent`" class="sent-message py-3"><h5 class="ps-2">{{myUser.message}}</h5></div>
+                                    <div v-if="myUser.status==`received`" class="receveid-message py-3"><h5 class="ps-2">{{myUser.message}}</h5></div>
                                 </div>
                             </div>
                         </div>
