interactive times and messages on chat left

--- a/Milestone5/index.html
+++ b/Milestone5/index.html
@@ -78,7 +78,7 @@
                                         </div>
                                     </div>
                                     <div class="rigth-avatar-time">
-                                        {{user.messages[messageLength(index)-1].date}}
+                                        {{setLeftClock(user,index)}}
                                     </div>
                                 </div>
 
